--- a/packages/storybook-html/src/components/grid/grid.scss
+++ b/packages/storybook-html/src/components/grid/grid.scss
@@ -12,6 +12,22 @@
   padding: core.$space-md 0;
   overflow: visible;
 
+  &--wrap-content {
+    .uq-grid {
+      &__col {
+        > span {
+          text-align: left !important;
+          white-space: normal !important;
+        }
+      }
+    }
+  }
+
+  &__highlight {
+    background-color: greenyellow;
+    box-shadow: 0 0 0 4px greenyellow;
+  }
+
   .uq-grid {
     &__col {
       > span {
@@ -20,11 +36,13 @@
         display: block;
         height: 100%;
         font-size: core.$font-size-xs;
-        overflow: hidden;
         padding: core.$space-xs;
         text-align: center;
-        text-overflow: ellipsis;
         white-space: nowrap;
+
+        .uqds-example-grid__highlight {
+          margin: -(core.$space-xs);
+        }
 
         @media #{core.$screen-xs-up} {
           background-color: lighten(core.$uq-yellow, 35%);
@@ -55,22 +73,6 @@
 
     + .uq-grid {
       margin-top: core.$space;
-    }
-  }
-
-  &__highlight {
-    background-color: greenyellow;
-    box-shadow: 0 0 0 4px greenyellow;
-  }
-
-  &--wrap-content {
-    .uq-grid {
-      &__col {
-        > span {
-          text-align: left;
-          white-space: normal;
-        }
-      }
     }
   }
 }
