--- a/packages/private-design-output/src/scss/main.scss
+++ b/packages/private-design-output/src/scss/main.scss
@@ -2,7 +2,7 @@
 @use 'core/src/scss/component' as core with (
   $uq-font-path: "../fonts"
 );
-@use "foundation-grid/src/scss/_component" as grid;
+@use 'grid/src/scss/component' as grid;
 @use "foundation-block-grid/src/scss/_component" as block-grid;
 @use "foundation-misc/src/scss/_component" as misc;
 @use 'body/src/scss/component' as body;
