--- a/packages/storybook-html/src/components/form/form-errors-kitchen-sink.html
+++ b/packages/storybook-html/src/components/form/form-errors-kitchen-sink.html
@@ -1,5 +1,5 @@
-<div class="row">
-  <div class="medium-6 column">
+<div class="uq-grid">
+  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4">
     <h1><small>Before error insertion</small></h1>
     <div id="errorSummary" role="alert"></div>
     <form id="passwordResetForm" method="post" class="form--full-width form--transparent-fieldsets">
@@ -33,7 +33,7 @@
       </fieldset>
     </form>
   </div>
-  <div class="medium-6 column">
+  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4">
     <h1><small>After error insertion</small></h1>
     <div id="errorSummary" class="error-summary" role="alert">
       <h2 class="error-summary__title">Your form was not submitted. Please fix the following issues.</h2>
