--- a/packages/storybook-html/src/components/page-header/page-header.html
+++ b/packages/storybook-html/src/components/page-header/page-header.html
@@ -1,7 +1,7 @@
 <!-- Page header (default) -->
 <div class="page__header">  
-  <div class="row">
-    <div class="large-12 columns">
+  <div class="uq-grid">
+    <div class="uq-grid__col uq-grid__col--6">
       <h1 class="page__title">Page title</h1>
     </div>
   </div>
@@ -10,8 +10,8 @@
 
 <!-- Page header (default) + Breadcrumb -->
 <div class="page__header">  
-  <div class="row">
-    <div class="large-12 columns">
+  <div class="uq-grid">
+    <div class="uq-grid__col uq-grid__col--6">
       <h1 class="page__title">Page title</h1>
       <!-- Breadcrumb starts -->
       <nav aria-label="breadcrumb">
