--- a/packages/storybook-html/src/components/card/card.html
+++ b/packages/storybook-html/src/components/card/card.html
@@ -171,11 +171,11 @@
         </div>
       </div>
       <div class="card__footer">
-        <div class="row collapse">
-          <div class="columns small-6">
+        <div class="uq-grid">
+          <div class="uq-grid__col uq-grid__col--3">
             <a class="card__link" href="#">Action link A</a>
           </div>
-          <div class="columns small-6">
+          <div class="uq-grid__col uq-grid__col--3">
             <a class="card__link" href="#">Action link B</a>
           </div>
         </div>
@@ -203,11 +203,11 @@
         </div>
       </div>
       <div class="card__footer">
-        <div class="row collapse">
-          <div class="columns small-6">
+        <div class="uq-grid">
+          <div class="uq-grid__col uq-grid__col--3">
             <a class="card__link" href="#">Action link A</a>
           </div>
-          <div class="columns small-6">
+          <div class="uq-grid__col uq-grid__col--3">
             <a class="card__link" href="#">Action link B</a>
           </div>
         </div>
@@ -235,11 +235,11 @@
         </div>
       </div>
       <div class="card__footer">
-        <div class="row collapse">
-          <div class="columns small-6">
+        <div class="uq-grid">
+          <div class="uq-grid__col uq-grid__col--3">
             <a class="card__link" href="#">Action link A</a>
           </div>
-          <div class="columns small-6">
+          <div class="uq-grid__col uq-grid__col--3">
             <a class="card__link" href="#">Action link B</a>
           </div>
         </div>
@@ -310,8 +310,8 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="columns small-12">
+<div class="uq-grid">
+  <div class="uq-grid__col uq-grid__col--6">
     <div class="card card--background-image card--portrait" style="background-image: url('//lorempixel.com/800/800');">
       <div class="card__header"></div>
       <div class="card__body">
