--- a/packages/storybook-html/src/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/src/components/intro/kitchen-sink.html
@@ -241,8 +241,8 @@
 
 <!-- breadcrumb -->
 <br/>
-<div class="row">
-  <div class="column">
+<div class="uq-grid">
+  <div class="uq-grid__col uq-grid__col--6">
     <nav aria-label="uq-breadcrumb">
       <ol class="uq-breadcrumb" itemscope="" itemtype="http://schema.org/BreadcrumbList">
         <li class="uq-breadcrumb__item uq-breadcrumb__item--home" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">
@@ -264,8 +264,8 @@
 <br/>
 
 <!-- body -->
-<div class="row">
-  <div class="column">
+<div class="uq-grid">
+  <div class="uq-grid__col uq-grid__col--6">
     <h1>h1 — Heading 1</h1>
     <h2>h2 — Heading 2</h2>
     <h3>h3 — Heading 3</h3>
@@ -278,8 +278,8 @@
 </div>
 <br/>
 
-<div class="row">
-  <div class="column">
+<div class="uq-grid">
+  <div class="uq-grid__col uq-grid__col--6">
     <h2>Button</h2>
     <a href="#" class="uq-button">Button</a>
     <a href="#" class="uq-button uq-button--secondary">Button secondary</a>
@@ -292,8 +292,8 @@
 <br/><br/>
 
 <!-- blockquote -->
-<div class="row">
-  <div class="column">
+<div class="uq-grid">
+  <div class="uq-grid__col uq-grid__col--6">
     <h2>Blockquotes</h2>
     <section class="background-light">
         <blockquote class="blockquote blockquote--dark blockquote--boxed">
@@ -320,8 +320,8 @@
 <br/>
 
 <!-- accordion -->
-<div class="row">
-  <div class="column">
+<div class="uq-grid">
+  <div class="uq-grid__col uq-grid__col--6">
     <h2>Accessible accordions</h2>
     <div class="accordion" aria-label="Accordion button group" role="presentation">
       <div class="accordion__item">
@@ -353,13 +353,13 @@
 <br/>
 
 <!-- card -->
-<div class="row">
-  <div class="column">
+<div class="uq-grid">
+  <div class="uq-grid__col uq-grid__col--6">
     <h2>Cards</h2>
   </div>
 </div>
-<div class="row">
-  <div class="column large-3 medium-6 ">
+<div class="uq-grid">
+  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-3">
     <a class="card__primary-link" href="https://campuses.uq.edu.au/st-lucia">
       <div class="entity entity-paragraphs-item paragraphs-item-card-custom card--square view-mode-card_overlay card card--background-image" style="background-image: url('https://campuses.uq.edu.au/files/9492/stlucia-card.jpg')">
         <div class="card__header"></div>
@@ -378,7 +378,7 @@
       </div>
     </a>
   </div>
-  <div class="column large-3 medium-6 ">
+  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-3">
     <a class="card__primary-link" href="https://campuses.uq.edu.au/gatton">
       <div class="entity entity-paragraphs-item paragraphs-item-card-custom card--square view-mode-card_overlay card card--background-image" style="background-image: url('https://campuses.uq.edu.au/files/9749/gatton-card2.jpg')">
         <div class="card__header"></div>
@@ -397,7 +397,7 @@
       </div>
     </a>
   </div>
-  <div class="column large-3 medium-6 ">
+  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-3">
     <a class="card__primary-link" href="https://campuses.uq.edu.au/herston">
       <div class="entity entity-paragraphs-item paragraphs-item-card-custom card--square view-mode-card_overlay card card--background-image" style="background-image: url('https://campuses.uq.edu.au/files/9480/herston-card.jpg')">
         <div class="card__header"></div>
@@ -416,7 +416,7 @@
       </div>
     </a>
   </div>
-  <div class="column large-3 medium-6  end ">
+  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-3">
     <a class="card__primary-link" href="https://campuses.uq.edu.au/other-locations">
       <div class="entity entity-paragraphs-item paragraphs-item-card-custom card--square view-mode-card_overlay card card--background-image" style="background-image: url('https://campuses.uq.edu.au/files/9779/moreton-island2.jpg')">
         <div class="card__header"></div>
@@ -439,8 +439,8 @@
 <br/>
 
 <!-- grid-menu -->
-<div class="row">
-  <div class="column">
+<div class="uq-grid">
+  <div class="uq-grid__col uq-grid__col--6">
     <h2>Grid menu with descriptions</h2>
     <ul class="grid-menu">
       <li class="grid-menu__item">
@@ -503,8 +503,8 @@
 </div>
 <br/>
 
-<div class="row">
-  <div class="column">
+<div class="uq-grid">
+  <div class="uq-grid__col uq-grid__col--6">
     <h2>Panes</h2>
     <div class="pane">
       <h3 class="pane__title">Pane title</h3>
