--- a/packages/storybook-html/src/components/body/body.scss
+++ b/packages/storybook-html/src/components/body/body.scss
@@ -5,7 +5,7 @@
 //   $use-encapsulation: true
 // );
 
-.uidf-body {
+.uqds-body {
   &__container {
     max-width: fnd-grid.$row-width;
     padding: 0 fnd-global.$column-gutter / 2;
