--- a/packages/storybook-html/src/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/src/components/intro/kitchen-sink.html
@@ -209,14 +209,18 @@
 
 <!-- alert -->
 <div class="alert alert--default" role="alert">
-  <div class="alert__message">
-    <b>I'm a default alert.</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+  <div class="alert__container">
+    <div class="alert__message">
+      <b>I'm a default alert.</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    </div>
   </div>
   <a href="javascript:void(0)" class="alert__close">&times;</a>
 </div>
 <div class="alert alert--info" role="alert">
-  <div class="alert__message">
-    <b>I come in a variety of styles and configurations.</b> See the <code>alerts</code> story for more examples.</a>
+  <div class="alert__container">
+    <div class="alert__message">
+      <b>I come in a variety of styles and configurations.</b> See the <code>alerts</code> story for more examples.</a>
+    </div>
   </div>
   <a href="javascript:void(0)" class="alert__close">&times;</a>
 </div>
